{
  "version": 4,
  "terraform_version": "1.14.3",
  "serial": 23,
  "lineage": "0f37f777-70bb-d0ed-15f7-544265037f7d",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-031395cf572029fda",
            "arn": "arn:aws:ec2:ap-south-2:119623945333:elastic-ip/eipalloc-031395cf572029fda",
            "domain": "vpc",
            "id": "eipalloc-031395cf572029fda",
            "network_border_group": "ap-south-2",
            "public_dns": "ec2-98-130-39-76.ap-south-2.compute.amazonaws.com",
            "public_ip": "98.130.39.76",
            "public_ipv4_pool": "amazon",
            "region": "ap-south-2",
            "tags": {
              "Name": "devsecops-gitops-nat-eip"
            },
            "tags_all": {
              "Name": "devsecops-gitops-nat-eip"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "119623945333",
            "id": "eipalloc-031395cf572029fda",
            "region": "ap-south-2"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-2:119623945333:internet-gateway/igw-0ff6b4d5344725f43",
            "id": "igw-0ff6b4d5344725f43",
            "owner_id": "119623945333",
            "region": "ap-south-2",
            "tags": {
              "Name": "devsecops-gitops-igw"
            },
            "tags_all": {
              "Name": "devsecops-gitops-igw"
            },
            "vpc_id": "vpc-05887f92957965c12"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "119623945333",
            "id": "igw-0ff6b4d5344725f43",
            "region": "ap-south-2"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-031395cf572029fda",
            "association_id": "eipassoc-00bc80d3f0c31a2fd",
            "availability_mode": "zonal",
            "connectivity_type": "public",
            "id": "nat-0c97d145bd4dd0dda",
            "network_interface_id": "eni-00c2da294902c1bff",
            "private_ip": "10.0.0.200",
            "public_ip": "98.130.39.76",
            "region": "ap-south-2",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0bed59616be60e24f",
            "tags": {
              "Name": "devsecops-gitops-nat"
            },
            "tags_all": {
              "Name": "devsecops-gitops-nat"
            },
            "vpc_id": "vpc-05887f92957965c12"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "119623945333",
            "id": "nat-0c97d145bd4dd0dda",
            "region": "ap-south-2"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-2:119623945333:route-table/rtb-011f4dc10622b86dc",
            "id": "rtb-011f4dc10622b86dc",
            "owner_id": "119623945333",
            "propagating_vgws": [],
            "region": "ap-south-2",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0c97d145bd4dd0dda",
                "network_interface_id": "",
                "odb_network_arn": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "devsecops-gitops-private-rt"
            },
            "tags_all": {
              "Name": "devsecops-gitops-private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-05887f92957965c12"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "119623945333",
            "id": "rtb-011f4dc10622b86dc",
            "region": "ap-south-2"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-2:119623945333:route-table/rtb-0c33da47f83ec9c2f",
            "id": "rtb-0c33da47f83ec9c2f",
            "owner_id": "119623945333",
            "propagating_vgws": [],
            "region": "ap-south-2",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0ff6b4d5344725f43",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "odb_network_arn": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "devsecops-gitops-public-rt"
            },
            "tags_all": {
              "Name": "devsecops-gitops-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-05887f92957965c12"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "119623945333",
            "id": "rtb-0c33da47f83ec9c2f",
            "region": "ap-south-2"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06959f1235efe114e",
            "region": "ap-south-2",
            "route_table_id": "rtb-011f4dc10622b86dc",
            "subnet_id": "subnet-0a0e6e8706ee50dbc"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "119623945333",
            "id": "rtbassoc-06959f1235efe114e",
            "region": "ap-south-2"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03a5d6cf2ee656bc9",
            "region": "ap-south-2",
            "route_table_id": "rtb-011f4dc10622b86dc",
            "subnet_id": "subnet-0abbf953da1d4eba0"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "119623945333",
            "id": "rtbassoc-03a5d6cf2ee656bc9",
            "region": "ap-south-2"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-067670fab9ebafd47",
            "region": "ap-south-2",
            "route_table_id": "rtb-0c33da47f83ec9c2f",
            "subnet_id": "subnet-0bed59616be60e24f"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "119623945333",
            "id": "rtbassoc-067670fab9ebafd47",
            "region": "ap-south-2"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-047433d71481dbe9a",
            "region": "ap-south-2",
            "route_table_id": "rtb-0c33da47f83ec9c2f",
            "subnet_id": "subnet-0146ef678a5eb7b84"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "119623945333",
            "id": "rtbassoc-047433d71481dbe9a",
            "region": "ap-south-2"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-2:119623945333:subnet/subnet-0a0e6e8706ee50dbc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-2a",
            "availability_zone_id": "aps2-az1",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a0e6e8706ee50dbc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "119623945333",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-2",
            "tags": {
              "Name": "devsecops-gitops-private-1"
            },
            "tags_all": {
              "Name": "devsecops-gitops-private-1"
            },
            "vpc_id": "vpc-05887f92957965c12"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "119623945333",
            "id": "subnet-0a0e6e8706ee50dbc",
            "region": "ap-south-2"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-2:119623945333:subnet/subnet-0abbf953da1d4eba0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-2b",
            "availability_zone_id": "aps2-az2",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0abbf953da1d4eba0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "119623945333",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-2",
            "tags": {
              "Name": "devsecops-gitops-private-2"
            },
            "tags_all": {
              "Name": "devsecops-gitops-private-2"
            },
            "vpc_id": "vpc-05887f92957965c12"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "119623945333",
            "id": "subnet-0abbf953da1d4eba0",
            "region": "ap-south-2"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-2:119623945333:subnet/subnet-0bed59616be60e24f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-2a",
            "availability_zone_id": "aps2-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bed59616be60e24f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "119623945333",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-2",
            "tags": {
              "Name": "devsecops-gitops-public-1"
            },
            "tags_all": {
              "Name": "devsecops-gitops-public-1"
            },
            "vpc_id": "vpc-05887f92957965c12"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "119623945333",
            "id": "subnet-0bed59616be60e24f",
            "region": "ap-south-2"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-2:119623945333:subnet/subnet-0146ef678a5eb7b84",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-2b",
            "availability_zone_id": "aps2-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0146ef678a5eb7b84",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "119623945333",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-2",
            "tags": {
              "Name": "devsecops-gitops-public-2"
            },
            "tags_all": {
              "Name": "devsecops-gitops-public-2"
            },
            "vpc_id": "vpc-05887f92957965c12"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "119623945333",
            "id": "subnet-0146ef678a5eb7b84",
            "region": "ap-south-2"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-2:119623945333:vpc/vpc-05887f92957965c12",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0b5032a60a890ace8",
            "default_route_table_id": "rtb-062935145e62a4970",
            "default_security_group_id": "sg-083a0f5a412cf1b51",
            "dhcp_options_id": "dopt-02344cb584d8635f2",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-05887f92957965c12",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-062935145e62a4970",
            "owner_id": "119623945333",
            "region": "ap-south-2",
            "tags": {
              "Name": "devsecops-gitops-vpc"
            },
            "tags_all": {
              "Name": "devsecops-gitops-vpc"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "119623945333",
            "id": "vpc-05887f92957965c12",
            "region": "ap-south-2"
          }
        }
      ]
    }
  ]
}